changes by chandan

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_BACKEND_URL=http://localhost:5000
+REACT_APP_BACKEND_URL=http://127.0.0.1:8000
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_MS_CLIENT_SECRET=e4a93ae9-7f11-456d-89b2-cfe45861bd69
 REACT_APP_MS_CLIENTID=7cfac74e-8cc0-493e-965b-4d0c0723599e
