changes done by harsh

--- a/.env
+++ b/.env
@@ -1,5 +1,2 @@
-REACT_APP_BACKEND_URL=http://127.0.0.1:8000
+REACT_APP_BACKEND_URL= http://127.0.0.1:8000
 SKIP_PREFLIGHT_CHECK=true
-REACT_APP_MS_CLIENT_SECRET=e4a93ae9-7f11-456d-89b2-cfe45861bd69
-REACT_APP_MS_CLIENTID=7cfac74e-8cc0-493e-965b-4d0c0723599e
-REACT_APP_MS_TENANTID=a8801bcb-7990-408e-ab0c-e73eccd70288
