--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "axios": "^1.13.2",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.562.0",
+    "plotly.js-dist-min": "^3.3.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-hot-toast": "^2.6.0",
     "react-pdf": "^10.3.0",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
